src/build/log/idf_py_stderr_output_171960
Command: make -j 18 all
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c: In function 'app_main':
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c:14:35: error: 'GPIO_MODE_OUT' undeclared (first use in this function); did you mean 'GPIO_MODE_OUTPUT'?
   14 |     gpio_set_direction(blink_led, GPIO_MODE_OUT);
      |                                   ^~~~~~~~~~~~~
      |                                   GPIO_MODE_OUTPUT
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c:14:35: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/blinky.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8651: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
